[gd_scene load_steps=4 format=2]

[ext_resource path="res://Nodes/Game Objects/FallingPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 2 )

[node name="Falling_Platform" type="StaticBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision = true

[node name="Player_Detector" type="Area2D" parent="."]
position = Vector2( 0, -16 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Detector"]
shape = SubResource( 2 )

[node name="Timer_StartFalling" type="Timer" parent="."]

[node name="Timer_Disapear" type="Timer" parent="."]

[connection signal="body_entered" from="Player_Detector" to="." method="_on_Player_Detector_body_entered"]
[connection signal="body_exited" from="Player_Detector" to="." method="_on_Player_Detector_body_exited"]
[connection signal="timeout" from="Timer_StartFalling" to="." method="_on_Timer_StartFalling_timeout"]
[connection signal="timeout" from="Timer_Disapear" to="." method="_on_Timer_Disapear_timeout"]
